# eventsource-broker

./: License  Makefile  README.md  eventsource-broker.cabal  eventsource.cabal
ruby/: msg.rb
src/: AMQPEvents.hs  AMQPListener.hs  DB.hs  EventStream.hs  Main.hs
src/Models/: Connection.hs  User.hs
src/models/: User.hs
static/: eshq.js  eventsource.js  eventsource.polyfill.js  iframe.html  index.html
templates/: eshq.js.st
