Name:                eventsource-broker
Version:             0.9
Synopsis:            EventSource Broker
Description:         Bridges EventSource and AMQP
License:             AllRightsReserved
Author:              Mathias Biilmann Christensen
Maintainer:          info@mathias-biilmann.net
Stability:           Alpha
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Executable eventsource-broker
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    base >= 4.3 && < 5,
    bytestring >= 0.9.1 && < 0.10,
    blaze-builder >= 0.3,
    MonadCatchIO-transformers >= 0.2.1 && < 0.3,
    mtl >= 2 && < 3,
    snap-core == 0.5.*,
    snap-server == 0.5.*,
    enumerator == 0.4.*,
    MissingH == 1.1.*,
    unix == 2.5.*,
    uri == 0.1.*,
    amqp == 0.3.*,
    aeson == 0.3.*,
    attoparsec == 0.9.*,
    system-uuid == 2.1.*

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
